# MediaConductor

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  START_HERE.md  THIRD_PARTY_NOTICES.md  config.example.json  config.system.example.json  pyproject.toml  run.bat  run.sh
.github/workflows/: ci.yml  release.yml
app/: index.html  package.json  vite.config.ts
app/src/: App.css  App.tsx  store.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
desktop/: electron-builder.yml  package-lock.json  package.json  run.sh
desktop/scripts/: bundle-backend.mjs
docs/: ai-guide.md  app.md  architecture.md  external-tools.md  install-tools.md  install.md  local-llm.md  manga-video-guide.md  multi-agent.md  publishing.md  recap-video-playbook.md  setup.md  youtube.md
docs/history/: incidents.md  legacy-inventory.md  reorg-plan.md  video-production-improvements-2026-07-20.md  youtube-upload-plan.md
docs/operate/: crop-verify-narrate.md
mangaeasy/: __init__.py  cli.py  command_spec.py  config.py  defaults.py  jobs.py  library_scan.py  mcp_server.py  paths.py  runtime.py  series_plan.py
mangaeasy/audio/: tts_pipeline.py
mangaeasy/download/: README.md  mangadex.py
mangaeasy/images/: README.md  ai_pdf.py  ai_zip.py  ai_zip_cli.py
mangaeasy/ocr/: README.md  got_ocr2_pipeline.py
mangaeasy/panels/: README.md  ai.py  direction.py  page.py  webtoon.py
mangaeasy/tools/: README.md  external.py  got_ocr2.py  install.py  smoke.py  vendored.py
mangaeasy/utils/: README.md  __init__.py
mangaeasy/video/: __init__.py  add_bg.py  render.py
mangaeasy/video_pipeline/: README.md  add_long_video_bgm.py  audio_audit.py  cleanup_all.py  cleanup_videos.py  common.py  ffmpeg_tools.py  generate_audio.py  generate_audio_indextts.py  item_video_builder.py  kokoro_batch_worker.py  long_video_builder.py  make_long_video.py  music_bed.py  normalize_long_audio.py  preprocess_audio_fades.py  run_pipeline.py  validate_generation.py
mangaeasy/web/: app.py  flask_utils.py  narration_editor.py  narration_editor_all.py  (+1 more)
mediaconductor/: __init__.py  brand.py  cli.py  command_spec.py  config.py  defaults.py  jobs.py  library_scan.py  mcp_server.py  modes.py  paths.py  qa_loop.py  runtime.py  series_plan.py  workboard.py
packaging/: launcher.py  mangaeasy.iss  mangaeasy.spec  mediaconductor.spec
scripts/: check_distribution.py  release.py
tests/: test_agent_flow.py  test_archive.py  test_audio_audit.py  test_audio_normalize.py  test_chapter_timestamps.py  test_cleanup_audio.py  test_cli.py  test_cli_contract.py  test_cli_editing_tools.py  test_cli_path_safety.py  test_defaults.py  test_demucs_offline.py  test_docs_crossref.py  test_e2e_render.py  test_gpu_clamp.py  test_item_narration_wav.py  test_item_selection.py  test_jobs.py  test_library_scan.py  test_long_video_discovery.py  test_long_video_gaps.py  test_long_video_validation.py  test_manga_json.py  test_mcp_server.py  test_modes.py  test_music_bed.py  test_narration_loading.py  test_new_toolchain.py  test_ocr_clean.py  test_page_split.py  test_preprocess_audio_fades.py  test_reading_direction.py  test_recrop_tools.py  test_repository_hygiene.py  test_resume_pruning.py  test_safety_guards.py  test_smoke_fixture.py  test_song_mode.py  test_story_mode.py  test_tool_env.py  (+8 more)
(+142 files in other folders)
