[project]
name = "mangaeasy"
version = "1.3.1"
description = "General manga and image-to-video automation with isolated external AI tool envs"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["manga", "video", "tts", "kokoro", "ffmpeg", "cuda"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    # Every entry here is imported by the main package — additions must be.
    # (The deleted GUI's deps — flask, playwright, cloudscraper, curl-cffi,
    # pydub, beautifulsoup4 — were purged 2026-07; don't reintroduce them.)
    "requests>=2.28.0",
    "pillow>=12.1.1",
    "img2pdf>=0.5.0",
    "numpy>=1.24.0",
    "pywinpty>=2.0; sys_platform == 'win32'",
    # YouTube connect + upload (OAuth loopback flow / token refresh only —
    # the upload itself is plain `requests` against the resumable protocol).
    "google-auth>=2.35.0",
    "google-auth-oauthlib>=1.2.0",
]

# No ML extras: torch/transformers/opencv live in the isolated external tool
# envs (`mangaeasy install-tool <name>` / `mangaeasy setup`), never in the
# main env. The old [ml]/[whisper]/[all] extras promised an install path the
# architecture abandoned; nothing referenced them.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mangaeasy"]

[tool.hatch.build.targets.sdist]
include = [
    "/mangaeasy",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
    "/uv.lock",
    "/config.example.json",
    "/config.system.example.json",
    "/docs",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["packaging"]

[tool.ruff.lint]
# Correctness-focused: pyflakes (F), a subset of pycodestyle errors (E),
# and bugbear (B). Style-only churn is deliberately left out — this codebase
# predates the linter.
select = ["E4", "E7", "E9", "F", "B"]
ignore = [
    "E402",  # lazy imports after module docstring/setup are a project convention
    "E731",  # lambda assignments are used deliberately in a few pipelines
    "B008",  # argparse default-factory pattern
]

[project.scripts]
# A single entry point. Run `mangaeasy --help` to see every subcommand.
mangaeasy = "mangaeasy.cli:main"

[project.urls]
Homepage = "https://github.com/tawhidUnhappy/mangaEasy"
Repository = "https://github.com/tawhidUnhappy/mangaEasy"
Issues = "https://github.com/tawhidUnhappy/mangaEasy/issues"

# Torch resolves from PyPI so the optional `ml` extra installs on any platform
# (Windows/Linux/macOS, CPU or GPU). CUDA-specific torch builds are handled in
# the isolated external tool envs by `mangaeasy install-tool`, never here.
